# architecture-sprint-3

./: .gitignore  EXAMPLE_README.md  README.md  docker-compose.yaml
.github/workflows/: ci.yaml  plantuml.yaml
charts/smart-home-monolith/: values.yaml
compose/kong/config/: nginx-kong.conf
compose/kong/declarative/: kong.yml
device-managment/: .env  Dockerfile  README.md  app.sh  config.py  database.py  main.py  pyproject.toml  requirements.txt
device-managment/controllers/: Command.py
device-managment/entities/: DeviceEntity.py  HouseEntity.py  SensorEntity.py  TargetTemperatureEntity.py  TelemetryEntity.py  UserEntity.py
device-managment/migrations/: env.py
device-managment/migrations/versions/: 0cf79155f39a_initial_migration.py  1479bf38bd5b_initial_migration.py  2070fa1635ea_initial_migration.py  22a87dae7e68_initial_migration.py  23f3f413e1d4_initial_migration.py  3944bcfe144a_initial_migration.py  46373d5dbc4d_add_entities.py  85805721c561_initial_migration.py  b37353bffd4c_initial_migration.py  c36c1fb49213_initial_migration.py  c5e8b94f2da3_initial_migration.py  f35e9d81985b_initial_migration.py
device-managment/repositories/: Managment.py
device-managment/schemas/: SDevice.py  SSensor.py  STargetTemperature.py
mkdoc/: mkdocs.yml  pyproject.toml
mkdoc/docs/: index.md
mkdoc/docs-api/: device-managment.yaml  telemetry.yaml
mkdoc/docs/architecture/: component.md  container.md  context.md  er.md  test.md
mkdoc/docs/puml_diagrams/: C4 Component v1.puml  C4 Container v1.puml  C4 Context v1.puml  ER Diagram v1.puml  test.puml
mkdoc/site/: 404.html  index.html  search.html
mkdoc/site/architecture/component/: index.html
mkdoc/site/architecture/context/: index.html
mkdoc/site/install/Smart Home Monolith/: index.html
mkdoc/site/puml/: component.puml
mkdoc/site/search/: search_index.json
telemetry/: .env  README.md  app.sh  config.py  database.py  main.py  pyproject.toml  requirements.txt
telemetry/schemas/: STemperature.py
terraform/: .terraform.lock.hcl
test/: pyproject.toml  test.py
