[tool.poetry]
name = "device-managment"
version = "0.1.0"
description = ""
authors = ["Sergeev O. V. <o.v.sergeyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.2"
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
alembic = "^1.13.3"
pydantic-settings = "^2.6.0"
asyncpg = "^0.29.0"
pydantic = "^2.9.2"
aiokafka = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
