[tool.poetry]
name = "mkdoc"
version = "0.1.0"
description = ""
authors = ["Sergeev O. V. <o.v.sergeyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.6.1"
mkdocs-plantuml = "^0.1.1"
mkdocs-puml = "^1.3.1"
plantuml-markdown = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
