[tool.poetry]
name = "telemetry"
version = "0.1.0"
description = ""
authors = ["Sergeev O. V. <o.v.sergeyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
influxdb-client = "^1.46.0"
aiokafka = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
