[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Sergeev O. V. <o.v.sergeyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uuid = "^1.30"
aiokafka = "^0.11.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
